--- a/Code/DINOv2_with_DORA.ipynb
+++ b/Code/DINOv2_with_DORA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7ndje6q85RD0aAUiSIoZ3",
+      "authorship_tag": "ABX9TyNS3KcsAB3hdkx1qlaVaVij",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,8 @@
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "import time\n",
-        "import copy"
+        "import copy\n",
+        "import matplotlib.pyplot as plt"
       ],
       "metadata": {
         "id": "d-XCayxMLQyS"
@@ -213,7 +214,35 @@
         "\n",
         "    # Load best model weights\n",
         "    model.load_state_dict(best_model_wts)\n",
-        "    return model, train_acc_history, train_loss_history, val_acc_history, val_loss_history"
+        "    return model, train_acc_history, train_loss_history, val_acc_history, val_loss_history\n",
+        "\n",
+        "def evaluate_model(model, test_dataloader, criterion, device='cuda'):\n",
+        "    model.eval()  # Set model to evaluate mode\n",
+        "\n",
+        "    running_loss = 0.0\n",
+        "    running_corrects = 0\n",
+        "\n",
+        "    for inputs, labels in test_dataloader:\n",
+        "        inputs = inputs.to(device)\n",
+        "        labels = labels.to(device)\n",
+        "\n",
+        "        # Forward pass\n",
+        "        with torch.no_grad():\n",
+        "            outputs = model(inputs)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "\n",
+        "            _, preds = torch.max(outputs, 1)\n",
+        "\n",
+        "        # Statistics\n",
+        "        running_loss += loss.item() * inputs.size(0)\n",
+        "        running_corrects += torch.sum(preds == labels.data)\n",
+        "\n",
+        "    epoch_loss = running_loss / len(test_dataloader.dataset)\n",
+        "    epoch_acc = running_corrects.double() / len(test_dataloader.dataset)\n",
+        "\n",
+        "    print('Test Loss: {:.4f} Acc: {:.4f}'.format(epoch_loss, epoch_acc))\n",
+        "\n",
+        "    return epoch_loss, epoch_acc"
       ],
       "metadata": {
         "id": "eezCt_fkLJ2S"
@@ -265,17 +294,76 @@
         "# hyper-parameters\n",
         "batch_size = 8\n",
         "num_epochs = 15\n",
-        "model_ft = model.to(device)\n",
+        "model = model.to(device)\n",
         "# optimizer\n",
         "optimizer_ft = torch.optim.Adam(params_to_update, lr=0.0002)\n",
         "# loss function\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "# train\n",
         "# Train and evaluate\n",
-        "model_ft, hist = train_model(model_ft, train_loader, val_loader, criterion, optimizer_ft, num_epochs=num_epochs)"
+        "model, train_acc_history, train_loss_history, val_acc_history, val_loss_history = train_model(model, train_loader, val_loader, criterion, optimizer_ft, num_epochs=num_epochs)"
       ],
       "metadata": {
         "id": "Zvo0og1KLOsS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_loss, test_acc = evaluate_model(model, test_dataloader, criterion, device='cuda')\n",
+        "print(f\"Test loss: {test_loss}\")\n",
+        "print(f\"Test accuracy: {test_acc}\")"
+      ],
+      "metadata": {
+        "id": "rLh6NqgoP5kz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_training_history(train_acc_history, val_acc_history, train_loss_history, val_loss_history):\n",
+        "    epochs = range(1, len(train_acc_history) + 1)\n",
+        "\n",
+        "    plt.figure(figsize=(12, 6))\n",
+        "\n",
+        "    # Subplot 1: Training and validation accuracy\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    plt.plot(epochs, train_acc_history, 'bo-', label='Training accuracy')\n",
+        "    plt.plot(epochs, val_acc_history, 'ro-', label='Validation accuracy')\n",
+        "    plt.title('Training and Validation Accuracy')\n",
+        "    plt.xlabel('Epochs')\n",
+        "    plt.ylabel('Accuracy')\n",
+        "    plt.legend()\n",
+        "\n",
+        "    # Subplot 2: Training and validation loss\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    plt.plot(epochs, train_loss_history, 'bo-', label='Training loss')\n",
+        "    plt.plot(epochs, val_loss_history, 'ro-', label='Validation loss')\n",
+        "    plt.title('Training and Validation Loss')\n",
+        "    plt.xlabel('Epochs')\n",
+        "    plt.ylabel('Loss')\n",
+        "    plt.legend()\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "58N5cx2vQCO7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plot_training_history(train_acc_history, val_acc_history, train_loss_history, val_loss_history)"
+      ],
+      "metadata": {
+        "id": "OjTaS-PmQuxM"
       },
       "execution_count": null,
       "outputs": []
