--- a/Code/Dataset_split_and_organization.ipynb
+++ b/Code/Dataset_split_and_organization.ipynb
@@ -37,12 +37,12 @@
       "metadata": {
         "id": "iVkkZsHAOHBk"
       },
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "id": "4har2vBqMrEh"
       },
@@ -80,9 +80,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7RZd8kZKOHuD",
-        "outputId": "5374994a-08f2-4e76-90f1-b2ba9d07a971"
+        "outputId": "38505dca-6799-441d-ca46-540b4f2f0f18"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,12 +127,12 @@
       ],
       "metadata": {
         "id": "8PFcPt7bFTrn",
-        "outputId": "223a05f7-6d8a-4ef0-a636-34164f51e638",
+        "outputId": "04a2ad92-52e6-46b8-8262-e65ed075e0eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,14 +163,14 @@
       "metadata": {
         "id": "8Oo02byFFgUP"
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Create directories\n",
-        "base_path = '/content/drive/My Drive/046211/Project'\n",
+        "base_path = '/content/drive/My Drive/046211/splited_dataset'\n",
         "for split in ['train', 'val', 'test']:\n",
         "    os.makedirs(os.path.join(base_path, split), exist_ok=True)"
       ],
@@ -184,6 +184,7 @@
       "cell_type": "code",
       "source": [
         "# Function to move images and update DataFrame paths\n",
+        "base_path = '/content/drive/My Drive/046211/splited_dataset'\n",
         "def move_and_update_paths(df, split_name):\n",
         "    new_paths = []\n",
         "    for _, row in df.iterrows():\n",
@@ -203,7 +204,7 @@
       "metadata": {
         "id": "8BmcgLUUkg66"
       },
-      "execution_count": 34,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -217,7 +218,7 @@
       "metadata": {
         "id": "rWVhuTO6KoUB"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     }
   ]
