--- a/Code/DINOv2_with_DORA.ipynb
+++ b/Code/DINOv2_with_DORA.ipynb
@@ -994,7 +994,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model.load_state_dict(torch.load(f'/content/drive/My Drive/046211/Project/Dinov2_model_2024-08-08_11-17-15.pth'))\n",
+        "model.load_state_dict(torch.load(f'/content/drive/My Drive/046211/Project/Dinov2_model_{timestamp}.pth'))\n",
         "test_loss, test_acc, conf_matrix = evaluate_model_with_confusion_matrix(model, test_loader, criterion, device='cuda')\n",
         "print(f\"Test loss: {test_loss}\")\n",
         "print(f\"Test accuracy: {test_acc}\")"
